Fix up content widths and alignments.

--- a/css/main.css
+++ b/css/main.css
@@ -312,10 +312,19 @@ ul {
     padding-bottom: 56px;
   }
 
+  .section h1,
+  .section h2,
+  .section h3,
+  .section h4,
+  .section h5 {
+    margin: 2em auto 1em auto;
+    max-width: 500px;
+  }
+
   .section img {
     display: block;
-    max-width: 100%;
-    margin: 2em auto;
+    max-width: 500px;
+    margin: 1em auto;
   }
 
   .section p {
